# studio

./: .gdbinit  .gitignore  .mtn-ignore  Makefile.am  Makefile.in  NOTES  TODO.txt  configure  configure.ac  em-poster.patch  release-expand.config  studio_test.pm  tests.config
data/purkinje/: coloring1.yml  hh_vm_average.yml
install/deb/: changelog  control  copyright  rules
install/rpm/: developer.spec  studio.spec
perl/: Makefile.am  Makefile.in  Neurospaces.c  Neurospaces.h  Neurospaces_embed.pm  Threads.pm  stubs.pm  test
perl/Data/: Comparator.pm  Differences.pm  Transformator.pm
perl/Neurospaces/: Biolevels.pm  GUI.pm  Modeler.pm  Morphology.pm  Project.pm  SolverInfo.pm  Studio.pm
perl/Neurospaces/GUI/: Algorithms.pm  Command.pm  Extractor.pm  Files.pm  Matrix.pm  Namespaces.pm  Workload.pm
perl/Neurospaces/GUI/Components/: Atomic.pm  Cell.pm  Link.pm  Mechanism.pm  Molecular.pm  Network.pm  Node.pm  Root.pm  Segment.pm
perl/Neurospaces/GUI/Tools/: Renderer.pm  numbers-7x11.txt
perl/Neurospaces/GUI/Tools/Renderer/: External.pm
perl/Neurospaces/Project/Modules/: Morphology.pm
perl_run/: hello.pl  list.pl  renderer.pl
tests/: Makefile.am  Makefile.in  introduction.html  neurospaces_harness  run  tests.config  tests_2_html
tests/specifications/: operators.t  reporting.t
