##
## Neurospaces studio: a tool set for use with Neurospaces.
##

##############################################################################
##'
##' Neurospaces studio: a tool set for use with Neurospaces.
##'
##' Copyright (C) 1999-2007 Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

perldir = $(prefix)/glue/swig/perl

nobase_dist_perl_DATA = @PERL_MODULES@

perldatadir = $(prefix)/neurospaces/studio

nobase_dist_perldata_DATA = @PERL_DATA@

