##
## Neurospaces studio: a tool set for use with Neurospaces.
##

##############################################################################
##'
##' Neurospaces studio: a tool set for use with Neurospaces.
##'
##' Copyright (C) 1999-2007 Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

#t automake does not allow to pass in arguments for tests ?

check_SCRIPTS = $(srcdir)/neurospaces_harness 

TESTS = $(srcdir)/neurospaces_harness

test: check

