##
## Neurospaces studio: a tool set for use with Neurospaces.
##

##############################################################################
##'
##' Neurospaces studio: a tool set for use with Neurospaces.
##'
##' Copyright (C) 1999-2008 Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

#t automake does not allow to pass in arguments for tests ?

TESTS = /usr/local/bin/neurospaces_harness

test: check

